tests/lean/1669.lean.expected.out
1669.lean:3:20: error: failed to synthesize type class instance for
⊢ has_singleton ? (expr → list expr → tactic unit)
1669.lean:1:4: error: failed to create auxiliary definition
